[gd_scene load_steps=9 format=3 uid="uid://b5bg6e65ydar6"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_jgrgp"]
[ext_resource type="PackedScene" uid="uid://btflhkspefg5v" path="res://scenes/player_1.tscn" id="1_nh1cb"]
[ext_resource type="PackedScene" uid="uid://dtvt43q4l1lvi" path="res://scenes/player_2.tscn" id="2_oq5v1"]
[ext_resource type="PackedScene" uid="uid://cgmdl5fgtd2n" path="res://scenes/scores.tscn" id="4_3fo56"]
[ext_resource type="PackedScene" uid="uid://df3btxksxfejm" path="res://scenes/ball.tscn" id="5_p0xwk"]
[ext_resource type="PackedScene" uid="uid://c5evufjyyvak4" path="res://scenes/goal.tscn" id="6_lo8wr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14kkp"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0acdi"]
size = Vector2(1154, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_jgrgp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8860.0
offset_top = -4755.0
offset_right = 9608.0
offset_bottom = 5629.0
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 323)

[node name="Player1" parent="." instance=ExtResource("1_nh1cb")]
position = Vector2(60, 324)
scale = Vector2(3, 3)

[node name="Player2" parent="." instance=ExtResource("2_oq5v1")]
position = Vector2(1096, 324)
scale = Vector2(3, 3)

[node name="Scores_p1" parent="." instance=ExtResource("4_3fo56")]
position = Vector2(293, 54)
scale = Vector2(3, 3)

[node name="Scores_p2" parent="." instance=ExtResource("4_3fo56")]
position = Vector2(895, 54)
scale = Vector2(3, 3)

[node name="top_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
position = Vector2(578, -11)
shape = SubResource("RectangleShape2D_14kkp")

[node name="bottom_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_wall"]
position = Vector2(577, 658)
rotation = -3.14159
shape = SubResource("RectangleShape2D_0acdi")

[node name="Ball" parent="." instance=ExtResource("5_p0xwk")]
position = Vector2(579, 319)

[node name="redGoal" parent="." instance=ExtResource("6_lo8wr")]
position = Vector2(0, 6)

[node name="blueGoal" parent="." instance=ExtResource("6_lo8wr")]
position = Vector2(1152, 7)

[connection signal="point_scored" from="redGoal" to="." method="_on_red_goal_point_scored"]
[connection signal="point_scored" from="blueGoal" to="." method="_on_blue_goal_point_scored"]
